codepkg/objects/SObject__mdt.object
<CustomObject>
    <fields>
        <fullName>Applicable_Trigger_Handlers__c</fullName>
        <description>All the trigger handlers that will be created on the object are entered here as semicolon separated value</description>
        <inlineHelpText>All the trigger handlers that will be created on the object are entered here as semicolon separated value</inlineHelpText>
        <label>Applicable Trigger Handlers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bypass_Trigger_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Trigger Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>ObjectApiName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to bypass validation rules for particular sobject.</description>
        <label>Skip Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>SObject</label>
    <pluralLabel>SObjects</pluralLabel>
</CustomObject>